[REFACTOR] remove dependency on additional package
I don't entirely agree with the author's approach in this step of the lesson. I've kept the version info static to the binary, but removed the extra package, as a happy medium.

--- a/kubernetes/Makefile
+++ b/kubernetes/Makefile
@@ -7,16 +7,15 @@ BUILD_TIME?=$(shell date -u '+%Y-%m-%d_%H:%M:%S')
 clean:
 	rm -f ${APP}
 	GOPATH=$(shell pwd) go fmt handlers
-	GOPATH=$(shell pwd) go fmt version
 
 build: clean
 	GOPATH=${GOPATH}:$(shell pwd) go build -o ${APP} -ldflags \
-	 "-s -w -X version.Release=${RELEASE} \
-		-X version.Commit=${COMMIT} \
-		-X version.BuildTime=${BUILD_TIME}"
+	 "-s -w -X handlers.Release=${RELEASE} \
+		-X handlers.Commit=${COMMIT} \
+		-X handlers.BuildTime=${BUILD_TIME}"
 
 run: build
 	PORT=${PORT} ./${APP}
 
 test:
-	GOPATH=$(shell pwd) go test -v -race handlers version
+	GOPATH=$(shell pwd) go test -v -race handlers
