forgot the service.yaml
initially, I thought this file was optional..... that's very wrong. all three of deployment, service, and ingress are necessary

--- a/kubernetes/Makefile
+++ b/kubernetes/Makefile
@@ -26,7 +26,7 @@ container: build
 push: container
 	docker push jprime/${APP}:${RELEASE}
 
-minikube: #push
+minikube: push
 	for t in $(shell find . -type f -name "*.yaml"); do \
 		cat $$t | \
 			sed -E "s/\{\{ \.Release \}\}/\"$(RELEASE)\"/g" | \
