--- a/grpc/Makefile
+++ b/grpc/Makefile
@@ -1,10 +1,25 @@
 APP?=service
+PROJECT?=weather
+DEVELOPER?=jprime
+VERSION?=0.0.1
 
-run: build
-	./${APP}
+GOOS?=linux
+GOARCH?=amd64
+
+WEATHER_UNDERGROUND_API_KEY?="unset"
+
+forecast:
+	docker run --name weathercache --rm -d redis || true
+	docker run --name weatherservice --rm --link "weathercache:redis.weather.svc" \
+		-e WEATHER_UNDERGROUND_API_KEY=${WEATHER_UNDERGROUND_API_KEY} \
+		-it ${DEVELOPER}/${PROJECT}:${VERSION} \
+		/service -day=6
+
+run: test clean build dockerize
+	$(MAKE) forecast
 
 build: clean
-	go build ${APP}.go
+	GOOS=${GOOS} GOARCH=${GOARCH} go build ${APP}.go
 
 clean:
 	go fmt
@@ -15,3 +30,6 @@ clean:
 test:
 	go test -v -race ./weather
 	go test -v -race ./wunderground
+
+dockerize:
+	docker build -t ${DEVELOPER}/${PROJECT}:${VERSION} .
