expose service over tcp

--- a/grpc/Dockerfile
+++ b/grpc/Dockerfile
@@ -5,6 +5,8 @@ ARG wunderground_key
 ENV REDIS_HOSTNAME redis.weather.svc
 ENV WEATHER_UNDERGROUND_API_KEY $wunderground_key
 
+EXPOSE 8000
+
 COPY ./service /
 
 CMD ["/service"]
